test: correction et ajout des tests pour Controller et Service